<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context="com.example.usuario.la_mar_de_cookies.MainActivity">

        <ImageView
            android:id="@+id/header_image"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:src="@drawable/lamardecookies" />

    <LinearLayout
        android:id="@+id/menu_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

       <ImageView
           android:id="@+id/order_button"
           style="@style/bar_button"
           android:src="@drawable/order" />

        <ImageView
            android:id="@+id/web_button"
            style="@style/bar_button"
            android:src="@drawable/web" />

        <ImageView
            android:id="@+id/fb_button"
            style="@style/bar_button"
            android:src="@drawable/fb" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <ImageView
            android:id="@+id/business_picture"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:scaleType="centerCrop"
            android:src="@drawable/business_picture" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/business_description"
            style="@style/description_texstyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/description" />

        <TextView
            android:id="@+id/telephone"
            style="@style/details_texstyle"
            android:layout_marginTop="10dp"
            android:text="@string/telephone" />

        <TextView
            android:id="@+id/address"
            style="@style/details_texstyle"
            android:text="@string/address" />

        <TextView
            android:id="@+id/order_timing"
            style="@style/details_texstyle"
            android:layout_marginBottom="20dp"
            android:text="@string/timing" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/orange" />

        <TextView
            android:id="@+id/footer"
            style="@style/footer"
            android:layout_marginBottom="15dp"
            android:text="@string/footer"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>